--- a/src/assets/css/CustomerList.css
+++ b/src/assets/css/CustomerList.css
@@ -62,16 +62,16 @@ th {
     font-weight: bold;
 }
 
-button {
-    height: 30px;
-    padding: 5px 10px;
-    margin: 2px;
-    background-color: grey;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+/*button {*/
+/*    height: 30px;*/
+/*    padding: 5px 10px;*/
+/*    margin: 2px;*/
+/*    background-color: grey;*/
+/*    color: white;*/
+/*    border: none;*/
+/*    border-radius: 4px;*/
+/*    cursor: pointer;*/
+/*}*/
 
 button:hover {
     background-color: #00FFFF;
