--- a/src/assets/css/AddCustomer.css
+++ b/src/assets/css/AddCustomer.css
@@ -74,8 +74,8 @@
     margin-top: 10px;
 }
 
-.error-message {
-    color: red;
-    font-weight: bold;
-    margin-top: 10px;
-}
+/*.error-message {*/
+/*    color: red;*/
+/*    font-weight: bold;*/
+/*    margin-top: 10px;*/
+/*}*/
